Changelog
=========

7.3-dev0 - (unreleased)
---------------------------

7.2 - (2025-04-30)
---------------------------
* Feature: Add email field to Users vocabulary
  [tedw87 - refs #274362]

7.1 - (2025-03-05)
---------------------------
* Change: Make upgrade step for svg update more efficent - refs #276995
  [avoinea]

7.0 - (2025-02-06)
---------------------------
* Feature: Improve plone.restapi controlpanel to check cp permissions
  [razvanMiu - ref #282173]
* Fix: Link getRemoteUrl for anonymous users when used as part of global navigation
  [ichim-david - refs #284346]
* Fix: navigation layer registration
  [tiberiuichim]

6.4 - (2025-02-03)
---------------------------
* Fix: HTML, Slate serializer for resolveuid images
  [avoinea - refs #282435]

6.3 - (2025-02-03)
---------------------------
* Fix: Context Navigation root_path extract from root_node
  [avoinea - refs #283961]
* Change: Fix Serializer HTML
  [dobri1408 - refs #282435]

6.2 - (2025-01-08)
---------------------------
* Fix: Add serializer for slate and html blocks refs
  [dobri1408 - refs #282435]
* Feature: add block transformer for contextNavigation
  [nileshgulia1 - refs #282065]
* Feature: add block transformer for versions
  [nileshgulia1 - refs #282065]

6.1 - (2024-12-10)
---------------------------
* Fix: large query on context navigation when on layout or add new item.
  We return no results when we have the `Additional files` variation set
  since it has potential to have a very large number of items.
  [ichim-david - refs #280463]
* Feature: Add `Language` querystring field in order to be able to filter by language in Search block
  [avoinea - refs #281503]

6.0 - (2024-12-05)
---------------------------
* Change: Fix plone.app.vocabularies.Users to work with Creators and Contributors Field
  [avoinea - refs #274362]
* Fix: Context Navigation title becoming undefined on Edit when deleting a manually added title
  [ichim-david - refs #280463]

5.8 - (2024-11-26)